[tool.poetry]
name = "001-inference-engines"
version = "0.1.0"
description = "Comparison between ONNXRuntime vs TensorRT vs PyTorch 2 on MobileNetV2 model"
authors = ["Joywalker <alexandrurazvant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchviz = "^0.0.2"
torch-summary = "^1.4.5"
onnx = "^1.16.1"
onnxruntime = "^1.18.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"
numpy = "1.26.4"
jupyter = "^1.0.0"
netron = "^7.8.2"
docker = "^7.1.0"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
